<resources>
    <string name="app_name">JustPe</string>
    <string name="Pay_india">Pay India</string>
    <string name="Amazing_pay">Amazing Pay</string>
    <string name="Bos_Pay">BOS Pay</string>
    <string-array name="login_array">
        <item>Select your type</item>
        <item>Customer</item>
        <item>Retailer</item>
    </string-array>
    <string-array name="title_type">
        <item>Select your title</item>
        <item>Mr</item>
        <item>Mrs</item>
        <item>Ms</item>
    </string-array>
    <string-array name="gender_array">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="recharge_array">
        <item>Select Type</item>
        <item>All</item>
        <item>Mobile</item>
        <item>DTH</item>
        <item>Electricity</item>
        <item>PostPaid</item>
        <item>Broadband</item>
        <item>Landline</item>
        <item>Water</item>
        <item>EMI</item>
        <item>Municipality</item>
        <item>LPG</item>
        <item>Cable</item>
        <item>Insurance</item>
    </string-array>
    <string-array name="transaction_array">
        <item>Select transaction type</item>
        
        
        <item>Commission</item>
        <item>Service Charges</item>
        <item>Money Transfer</item>
        
        
        
        
        
        <item>Payin</item>
        <item>Payout</item>

    </string-array>
    <string-array name="makePayment_array">
        <item>Select your payment mode</item>
        <item>Cash Deposit</item>
        <item>UPI/IMPS</item>
        <item>Net Banking</item>
        <item>CDM Deposit</item>
        <item>RTGS/NEFT</item>
        <item>Others</item>
    </string-array>
    <string-array name="transactionDMT_array">
        <item>Select your transfer mode</item>
        <item>IMPS</item>
        <item>NEFT</item>
    </string-array>
    <string-array name="recharge_circle">
        <item>Andhra Pradesh Telangana</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Jharkhand</item>
        <item>Chennai</item>
        <item>Delhi NCR</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu Kashmir</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Kolkata</item>
        <item>Madhya Pradesh</item>
        <item>Chhattisgarh</item>
        <item>Maharashtra</item>
        <item>Goa</item>
        <item>Mumbai</item>
        <item>North East</item>
        <item>Orissa</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Tamil Nadu</item>
        <item>UP East</item>
        <item>UP West</item>
        <item>West Bengal</item>
    </string-array>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="responseNULL" translatable="false">Try again later!</string>
    <string name="catch_msg" translatable="false">Please try after sometime!</string>
    <string name="responseNotSuccessful" translatable="false">Something went wrong!</string>
    <string name="Onfailure" translatable="false">Oops..Something went wrong!!</string>
    <string name="NoInternet" translatable="false">No Internet!!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="create_acc">Create Account</string>
    <string name="title_activity_dayinand_out_scrolling">DayinandOutScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="day_out">Day out</string>
    <string name="day_in">Day In</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_task">Add Task</string>
    <string name="add_leads">Add GSP</string>
    <string name="add_issue">Add Issue</string>
    <string name="add_event">Add Event</string>
    <string name="Dashboard_Heading_textview">Items assigned to me across all projects with tasks including start date</string>
    <string name="milestones">Milestones</string>
    <string name="tasks">Application Status</string>
    <string name="events">Events</string>
    <string name="title_activity_calling">CallingActivity</string>
    <string name="last_day_in">Last day in : </string>
    <string name="last_day_out">Last day out :</string>
    <string name="title_activity_meetings">MeetingsActivity</string>
    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_one_time_login">Sign in</string>
    <string name="isourse">Grofers Help Desk</string>
    <string name="logout">Logout</string>
    <string name="passWorld">Change Password</string>
    <string name="share_app_link">Share</string>
    <string name="search">Search</string>
    <string name="owner_details">Owner Details</string>
    <string name="xB_details">XB Details</string>
    <string name="store_detail">Store Details</string>
    <string name="deliverer_detail">Deliverer Details</string>
    <string name="onboarding_detail">OnBoarding Fee Details</string>
    <string name="store_front_picture">Store Front Picture</string>
    <string name="store_state">State</string>
    <string name="driving_license_picture">Driving License Picture</string>
    <string name="store_details">Store Details</string>
    <string name="deliverer_details">Deliverer Details</string>
    <string name="onboarding_fee_details">OnBoarding Fee Details</string>
    <string name="van_owner_details">Van Owner Details</string>
    <string name="dp_longitude">Dp Longitude</string>
    <string name="dp_latitute">Dp Latitute</string>
    <string name="frnt_driving_licence_img">Front Driving Licence Image</string>
    <string name="bck_driving_licence_img">Back Driving Licence Image</string>
    <string name="agreementSigned">Agreement Signed</string>
    <string name="agreementNOTSigned">Agreement Not Signed</string>
    <string name="enter_delivery_boy_contact_no"><font size="15">Enter Delivery Boy Contact No</font></string>
    <string name="service_partners">Service Partners</string>
    <string name="powered_by_isourse">Powered by <a href="https://isourse.com/">Isourse</a></string>
    <string name="welcome_to_service_partners">Welcome to Service Partners</string>
    <string name="please_enter_userID">Enter user id</string>
    <string name="oldPassword">Enter Old Password</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="newPassword">Enter New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="conPassword">Oops..password does not match</string>
    <string name="samePass">Old or New Password can\'t be same</string>
    <string name="forgot_password">Update password?</string>
    <string name="login_res">Login</string>
    <string name="backBtn">Back</string>
    <string name="login_signup">Create Account</string>
    <string name="add_gsp">Add GSP</string>
    <string name="gsp_form">Gsp Form</string>
    <string name="add_dp">Add DP</string>
    <string name="add_vsp">Add VSP</string>
    <string name="logout_title">Log Out from BOS Pay</string>
    <string name="logout_message">Are you sure you want would like to Log Out from BOS Pay</string>
    <string name="gsp">GSP</string>
    <string name="vsp">VSP</string>
    <string name="dp">DP</string>
    <string name="all_dp">All DP</string>
    <string name="all_gsp">All GSP</string>
    <string name="all_znpl">All ZHPL</string>
    <string name="all_bcpl">All BCPL</string>
    <string name="all_vsp">All VSP</string>
    <string name="created">Created</string>
    <string name="view">View</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="internet_msg">Please Check Your Internet Connection</string>
    <string name="dialogtitle">Confirm</string>
    <string name="progressMsg">Loading</string>
    <string name="retry">Retry</string>
    <string name="couldnt_retry">Couldn\'t retry</string>
    <string name="file_uploaded">File Uploaded</string>
    <string name="form_update">Form Updated</string>
    <string name="dismiss_text">GOT IT</string>
    <string name="context_arrow">Update your status card.</string>
    <string name="view_ol_gsp_vsp_dp">View all vsp, gsp, dp.</string>
    <string name="view_ol_store_rsc_dp">View all store, rsc, dp.</string>
    <string name="view_ol_ba">View all BA</string>
    <string name="popup_img_context">Click to view image</string>
    <string name="verifying_training_txt">Know verification status.</string>
    <string name="please_wait">Please Wait</string>
    <string name="vsp_form">Vsp Form</string>
    <string name="dp_form">Dp Form</string>
    <string name="fail">Fail</string>
    <string name="success">Success</string>
    <string name="court_verify_stts">Court verification status :</string>
    <string name="pan_verify_stts">PAN verification status :</string>
    <string name="post_verify_stts">Postal address verification status :</string>
    <string name="store_verify_stts">Store address verification status :</string>
    <string name="aadhaar_verify_stts">Aadhaar verification status :</string>
    <string name="agreement_verify_stts">Agreement verification status :</string>
    <string name="document_verify_stts">Document verification status :</string>
    <string name="update">Update</string>
    <string name="sign_up">Create Account</string>
    <string name="tracking_status">Tracking Status</string>
    <string name="date_amp_time">Date &amp; Time</string>
    <string name="status">Status</string>
    <string name="stages">Stages</string>
    <string name="id_creation">ID Creation</string>
    <string name="list_of_gsp">List of Gsps</string>
    <string name="remember_me">Remember me</string>
    <string name="loginId">LoginID</string>
    <string name="user_password">User Password</string>
    <string name="forgot_password_pin">Forgot Password/PIN</string>
    <string name="login">Login</string>
    <string name="edit">Edit</string>
    <string name="cnfrm">CONFIRM</string>
    <string name="gsttitle">GST Information</string>
    <string name="compnayname">Company Name</string>
    <string name="regis">Registration No</string>
    <string name="reviewtitle">Review Details</string>
    <string name="reviwmsg">Please ensure that the spelling of your name and other details match with your travel document/govt. ID, as these cannot be changed later.Errorr might lead to cancellation penalties .</string>
</resources>