<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:layout_marginHorizontal="@dimen/dimen_10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reviewtitle"
                android:textColor="@color/lightBlack"
                android:textSize="@dimen/dimen_16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bodyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:layout_marginHorizontal="@dimen/dimen_10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintBottom_toTopOf="@+id/confirmbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reviwmsg"
                android:textColor="@color/edittext_color" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/showingpassangerlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_6dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/passangerdetails_itemlayout" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirmbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/edittxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/edit"
                android:textAllCaps="true"
                android:visibility="invisible"
                android:textColor="@color/blue"
                android:textSize="@dimen/dimen_14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confrmtxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/cnfrm"
                android:textColor="@color/blue"
                android:textSize="@dimen/dimen_14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
