<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen_10dp"
                android:src="@drawable/cross_icon"
                app:tint="@color/edittext_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/gsttitle"
                android:textColor="@color/lightBlack"
                android:textSize="@dimen/dimen_16sp"
                android:textStyle="bold" />

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dimen_10dp"
        android:paddingBottom="@dimen/dimen_50dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_30dp">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/company_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                app:hintEnabled="true"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/teal_700"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/compnayname"
                    android:textSize="@dimen/dimen_14sp"
                    android:padding="@dimen/dimen_10dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/registration_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                app:hintEnabled="true"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/teal_700"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registrationNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regis"
                    android:textSize="@dimen/dimen_14sp"
                    android:padding="@dimen/dimen_10dp"/>

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>


        <LinearLayout
            android:id="@+id/confirmbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:background="@drawable/searchbutton"
            app:layout_constraintTop_toBottomOf="@+id/extraofferList">

            <TextView
                android:text="@string/cnfrm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_14sp"
                android:textStyle="bold"
                android:padding="@dimen/dimen_10dp"/>


        </LinearLayout>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>